@@ -22,23 +22,20 @@
 // THE SOFTWARE.
 package com.microsoft.identity.common;
 
-import android.content.Intent;
+import static com.microsoft.identity.common.java.exception.ServiceException.SERVICE_NOT_AVAILABLE;
 
 import androidx.annotation.NonNull;
 import androidx.test.core.app.ApplicationProvider;
 import androidx.test.ext.junit.runners.AndroidJUnit4;
 
-import com.microsoft.identity.common.java.result.ILocalAuthenticationResult;
-import com.microsoft.identity.common.java.result.LocalAuthenticationResult;
+import com.microsoft.identity.common.internal.commands.RefreshOnCommand;
 import com.microsoft.identity.common.java.cache.CacheRecord;
-import com.microsoft.identity.common.java.exception.TerminalException;
 import com.microsoft.identity.common.java.cache.ICacheRecord;
 import com.microsoft.identity.common.java.commands.BaseCommand;
 import com.microsoft.identity.common.java.commands.CommandCallback;
+import com.microsoft.identity.common.java.commands.EmptyCommandCallback;
+import com.microsoft.identity.common.java.commands.ICommandResult;
 import com.microsoft.identity.common.java.commands.parameters.CommandParameters;
-import com.microsoft.identity.common.internal.commands.RefreshOnCommand;
-import com.microsoft.identity.common.java.commands.parameters.DeviceCodeFlowCommandParameters;
-import com.microsoft.identity.common.java.commands.parameters.GenerateShrCommandParameters;
 import com.microsoft.identity.common.java.commands.parameters.DeviceCodeFlowCommandParameters;
 import com.microsoft.identity.common.java.commands.parameters.GenerateShrCommandParameters;
 import com.microsoft.identity.common.java.commands.parameters.InteractiveTokenCommandParameters;
@@ -47,19 +44,22 @@ import com.microsoft.identity.common.java.commands.parameters.SilentTokenCommand
 import com.microsoft.identity.common.java.controllers.BaseController;
 import com.microsoft.identity.common.java.controllers.CommandDispatcher;
 import com.microsoft.identity.common.java.controllers.CommandResult;
+import com.microsoft.identity.common.java.dto.AccessTokenRecord;
+import com.microsoft.identity.common.java.dto.AccountRecord;
+import com.microsoft.identity.common.java.dto.IdTokenRecord;
+import com.microsoft.identity.common.java.dto.RefreshTokenRecord;
+import com.microsoft.identity.common.java.exception.ClientException;
+import com.microsoft.identity.common.java.exception.ServiceException;
+import com.microsoft.identity.common.java.exception.TerminalException;
+import com.microsoft.identity.common.java.providers.oauth2.AuthorizationResult;
+import com.microsoft.identity.common.java.providers.oauth2.TokenResult;
+import com.microsoft.identity.common.java.request.SdkType;
 import com.microsoft.identity.common.java.result.AcquireTokenResult;
 import com.microsoft.identity.common.java.result.FinalizableResultFuture;
 import com.microsoft.identity.common.java.result.GenerateShrResult;
-import com.microsoft.identity.common.java.exception.ClientException;
-import com.microsoft.identity.common.java.exception.ServiceException;
-import com.microsoft.identity.common.java.providers.oauth2.AuthorizationResult;
+import com.microsoft.identity.common.java.result.ILocalAuthenticationResult;
+import com.microsoft.identity.common.java.result.LocalAuthenticationResult;
 import com.microsoft.identity.common.java.util.ported.PropertyBag;
-import com.microsoft.identity.common.java.providers.oauth2.TokenResult;
-import com.microsoft.identity.common.java.dto.AccessTokenRecord;
-import com.microsoft.identity.common.java.dto.IdTokenRecord;
-import com.microsoft.identity.common.java.dto.RefreshTokenRecord;
-import com.microsoft.identity.common.java.dto.AccountRecord;
-import com.microsoft.identity.common.java.request.SdkType;
 
 import org.junit.Assert;
 import org.junit.Test;
@@ -73,12 +73,11 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
-
-import static com.microsoft.identity.common.java.exception.ServiceException.SERVICE_NOT_AVAILABLE;
 
 
 @RunWith(AndroidJUnit4.class)
@@ -365,6 +364,46 @@ public class CommandDispatcherTest {
         f.isCleanedUp();
         f2.isCleanedUp();
         Assert.assertFalse(CommandDispatcher.isCommandOutstanding(testCommand));
+    }
+
+    @Test
+    public void testStopSilentRequestExecutor() throws Exception {
+        LongRunningTestCommand testCommand = new LongRunningTestCommand(getEmptyTestParams(), new EmptyCommandCallback());
+        // schedule a long running test command
+        FinalizableResultFuture<CommandResult> future1 = CommandDispatcher.submitSilentReturningFuture(testCommand);
+
+        // Stop the silent executor
+        CommandDispatcher.stopSilentRequestExecutor();
+
+        // verify that the previous command results in error
+        CommandResult result = future1.get();
+        Assert.assertEquals(ICommandResult.ResultStatus.ERROR, result.getStatus());
+
+        // try scheduling a new command
+        try {
+            CommandDispatcher.submitSilentReturningFuture(new LongRunningTestCommand(getEmptyTestParams(), new EmptyCommandCallback()));
+            Assert.fail("Should not reach here");
+        } catch (final Exception e) {
+            // Should be rejected to get scheduled
+            Assert.assertTrue(e instanceof RejectedExecutionException);
+        }
+    }
+
+    @Test
+    public void testResetSilentRequestExecutor() throws Exception {
+        LongRunningTestCommand testCommand = new LongRunningTestCommand(getEmptyTestParams(), new EmptyCommandCallback());
+        // schedule a long running test command
+        CommandDispatcher.submitSilentReturningFuture(testCommand);
+        // Stop the silent executor
+        CommandDispatcher.stopSilentRequestExecutor();
+        // reset the silent executor
+        CommandDispatcher.resetSilentRequestExecutor();
+        // schedule a test command
+        FinalizableResultFuture<CommandResult> future = CommandDispatcher.submitSilentReturningFuture(new TestCommand(getEmptyTestParams(), new EmptyCommandCallback(), 1));
+        // verify command is executed and result is returned
+        CommandResult result = future.get();
+        Assert.assertEquals(ICommandResult.ResultStatus.COMPLETED, result.getStatus());
+        Assert.assertEquals(TEST_RESULT_STR, result.getResult());
     }
 
     private TestCommand getTestCommand(final CountDownLatch testLatch) {
@@ -865,6 +904,23 @@ public class CommandDispatcherTest {
 
     }
 
+    public static class LongRunningTestCommand extends BaseCommand {
+        public LongRunningTestCommand(@NonNull final CommandParameters parameters,
+                           @NonNull final CommandCallback callback) {
+            super(parameters, getTestController(), callback, "test_id");
+        }
+
+        @Override
+        public Object execute() throws Exception {
+            Thread.sleep(10000);
+            return null;
+        }
+
+        @Override
+        public boolean isEligibleForEstsTelemetry() {
+            return false;
+        }
+    }
     private static BaseController getTestController() {
         return new TestBaseController() {
         };
